Update 03_tomcat.md